package NYT.NYson.NProto;

import "yt_proto/yt/core/yson/proto/protobuf_interop.proto";

option (NYT.NYson.NProto.derive_underscore_case_names) = true;

message TCamelCaseStyleMessage
{
    enum EEnum
    {
        VALUE_NONE = 0;
        VALUE_FIRST = 1;
    }

    optional int32 SomeField = 1;
    optional int32 AnotherField123 = 2;
    optional int32 Crazy_Field = 3;
    optional EEnum EnumField = 4;
}
